[gd_scene load_steps=12 format=2]

[ext_resource path="res://menus/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://menus/diff_menu.gd" type="Script" id=2]
[ext_resource path="res://menus/special_buttons/arrow_buttons.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/GUI/menu_panel.png" type="Texture" id=4]
[ext_resource path="res://assets/font/EightBitDragon-anqx.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://menus/special_buttons/button_cancel.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="title_menu" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 771.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="difficulty_select_label" type="Label" parent="background"]
margin_left = 352.0
margin_top = -8.0
margin_right = 946.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty select"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diff_name" type="Label" parent="background"]
margin_left = 424.0
margin_top = 312.0
margin_right = 868.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 2 )
text = "Hard"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_ok" type="Button" parent="background"]
margin_left = 1024.0
margin_top = 640.0
margin_right = 1144.0
margin_bottom = 720.0
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 1 )
text = "Ok"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="Label" parent="background/button_ok"]
show_behind_parent = true
margin_left = 30.3018
margin_top = 20.3656
margin_right = 100.302
margin_bottom = 70.3656
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_buttons" parent="background" instance=ExtResource( 3 )]
default_value = 2

[node name="button_cancel" parent="." instance=ExtResource( 6 )]
